<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".WaterReminder">

    <!-- The main content layout -->
    <RelativeLayout
        android:id="@+id/relativeLayoutArticles"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/waterTextView"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="Water Reminder"
            android:background="#0D1282"
            android:textColor="@color/white"
            android:paddingStart="10dp"
            android:textSize="40sp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="8dp"/>

        <FrameLayout
            android:id="@+id/rectangleContainer"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_below="@+id/waterTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/waterimg">

            <!-- Filling Rectangle -->
            <View
                android:id="@+id/fillingRectangle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#2196F3" />
        </FrameLayout>


        <LinearLayout
            android:layout_width="402dp"
            android:layout_height="266dp"
            android:layout_above="@+id/buttonLayout"
            android:layout_below="@+id/rectangleContainer"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"

            android:layout_marginEnd="10dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/rounded_articles"
            android:backgroundTint="#0D1282"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:text="@string/hydration_tips"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_1_drink_about_8_glasses_of_water_daily"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_2_take_small_sips_throughout_the_day"
                android:textColor="@color/white"
                android:textSize="20sp"

                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="40dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_3_drink_when_you_re_thirsty"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/_4_consume_water_rich_foods_like_fruits_and_vegetables"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_5_carry_a_refillable_water_bottle_with_you"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottomNavigationView"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/remind_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:text="Remind Me" />

            <Button
                android:id="@+id/stopRemider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:text="I drank water" />

            <Button
                android:id="@+id/stopService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:text="Stop Service" />
        </LinearLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-3dp"
            app:menu="@menu/bottom_nav_menu" />


    </RelativeLayout>





    <!-- The navigation drawer layout -->
    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical">

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/side_navbar" />

    </LinearLayout>



</androidx.drawerlayout.widget.DrawerLayout>
